--- a/ProiectFinal/src/main/resources/application.properties
+++ b/ProiectFinal/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/MovieDB
 spring.datasource.username=postgres
 spring.datasource.password=razvan
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
