--- a/ProiectFinal/pom.xml
+++ b/ProiectFinal/pom.xml
@@ -21,6 +21,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -32,24 +36,19 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-
         <dependency>
-
             <groupId>org.springframework.boot</groupId>
-
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-
         </dependency>
-
         <dependency>
-
             <groupId>org.springframework.data</groupId>
-
             <artifactId>spring-data-jpa</artifactId>
-
             <version>3.1.3</version>
-
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.23</version> <!-- Use the appropriate version -->
         </dependency>
     </dependencies>
 
