--- a/ProiectFinal/src/main/resources/application.properties
+++ b/ProiectFinal/src/main/resources/application.properties
@@ -3,5 +3,4 @@ spring.datasource.username=postgres
 spring.datasource.password=razvan
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-
+spring.jpa.hibernate.ddl-auto=update
