--- a/ProiectFinal/pom.xml
+++ b/ProiectFinal/pom.xml
@@ -76,6 +76,12 @@
             <artifactId>spring-security-config</artifactId>
             <version>6.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
